# Viper-lang

./: .gitmodules  LICENSE  README.md
docs/: book.toml  pipeline.drawio  Дизайн языка.md  Документация языка Viper (ver. 0.2-alpha).md  решение проблем.md
docs/.obsidian/: workspace.json
src/: Cargo.toml
src/viper/: Cargo.toml
src/viper/src/: lib.rs
src/viper_analyze/: Cargo.toml
src/viper_analyze/src/: analyzer.rs
src/viper_ast/: Cargo.toml
src/viper_ast/src/: ast.rs  import.rs
src/viper_cli/: Cargo.toml
src/viper_cli/src/: cli.rs
src/viper_common/: Cargo.toml
src/viper_gen/: Cargo.toml
src/viper_gen/src/: resolver.rs  visitor.rs
src/viper_lex/: Cargo.toml
src/viper_lex/src/: lexer.rs  tokens.rs
src/viper_parse/: Cargo.toml
src/viper_parse/src/: parser.rs
src/viper_vm/: Cargo.toml
src/viper_vm/src/: bytecode.rs  table.rs  values.rs  vm.rs
src/viper_vm/src/natives/: natives.rs  utils.rs
src/viper_vm/src/natives/libs/: natives_base.rs  natives_convert.rs  natives_crypto.rs  natives_ffi.rs  natives_fs.rs  natives_gc.rs  natives_io.rs  natives_list.rs  natives_math.rs  natives_net.rs  natives_strings.rs  natives_system.rs  natives_time.rs
viper/: Cargo.toml
viper/crates/viper/: Cargo.toml
viper/crates/viper/src/: main.rs
viper/crates/viper_lexer/: Cargo.toml
viper/crates/viper_lexer/src/: lexer.rs  lib.rs  token.rs
viper/src/: main.rs
viper/src/viper_lex/: Cargo.toml
viper/src/viper_lex/src/: cursor.rs  tokens.rs
