[package]
name = "viper_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
viper_common = { path = "../viper_common" }
viper_lex = { path = "../viper_lex" }
viper_ast = { path = "../viper_ast" }
viper_vm = { path = "../viper_vm" }
viper_parse = { path = "../viper_parse" }
viper_analyze = { path = "../viper_analyze" }
